--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,9 @@ body {
     margin: 0;
     box-sizing: border-box;
 }
+.app {
+    p {
+        font-family: "Bebas Neue";
+        font-size: 5rem;
+    }
+}
